<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddNewAddressActivity">

    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/name" />
                <EditText
                    android:id="@+id/name"
                    android:inputType="textPersonName"
                    android:hint="@string/required"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/street" />
                <EditText
                    android:id="@+id/street"
                    android:inputType="text"
                    android:hint="@string/required"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/building" />
                <EditText
                    android:id="@+id/building"
                    android:hint="@string/required"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/flat" />
                    <EditText
                        android:id="@+id/flat"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/city" />
                    <EditText
                        android:id="@+id/city"
                        android:inputType="text"
                        android:hint="@string/required"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/district" />
                    <EditText
                        android:id="@+id/district"
                        android:inputType="text"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                    </EditText>
                </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right"
                android:gravity="left">
                <Button
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/add_address"
                    android:onClick="addAddress"
                    android:layout_gravity="left" />

                <Button
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/add_address_protocol_sie"
                    android:onClick="addAddressAndProtocolSiemianowice"
                    android:layout_gravity="left" />

                <Button
                    android:layout_height="fill_parent"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/add_address_protocol_pad"
                    android:onClick="addAddressAndProtocolPadarewskiego"
                    android:layout_gravity="left" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
