<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddNewFormActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/choose_worker" />
            <Spinner
                android:id="@+id/workers_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/temperature_outside" />
            <EditText
                android:id="@+id/temp_outside"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/required"
                android:layout_width="200dp"
                android:layout_height="wrap_content" >
            </EditText>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ABABAB"
                android:text="@string/celcius_degrees" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/temperature_inside" />
            <EditText
                android:id="@+id/temp_inside"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/required"
                android:layout_width="200dp"
                android:layout_height="wrap_content" >
            </EditText>
            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ABABAB"
                android:text="@string/celcius_degrees" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/save_button"
            android:onClick="selectWorker"
            android:layout_gravity="right" />
    </LinearLayout>

</RelativeLayout>
