<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    tools:context=".AddNewFormActivity">

        <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="false"
                      android:layout_alignParentLeft="false"
                      android:layout_alignParentRight="false"
                      android:layout_alignParentTop="false"
                      android:orientation="vertical">

            <LinearLayout android:id="@+id/linearLayout"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/choose_worker"/>

                <Spinner
                    android:id="@+id/workers_spinner"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/temperature_outside"/>

                <EditText
                    android:id="@+id/temp_outside"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="numberDecimal|numberSigned">
                </EditText>

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/celcius_degrees"
                    android:textColor="#ABABAB"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/temperature_inside"/>

                <EditText
                    android:id="@+id/temp_inside"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/required"
                    android:inputType="numberDecimal|numberSigned">
                </EditText>

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/celcius_degrees"
                    android:textColor="#ABABAB"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/company_address_header" />

                <com.wruzjan.ihg.utils.view.InstantAutoCompleteTextView
                    android:id="@+id/company_address_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/protocol_type_header" />

                <com.wruzjan.ihg.utils.view.InstantAutoCompleteTextView
                    android:id="@+id/protocol_type_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:onClick="selectWorker"
                android:text="@string/save_button"/>
        </LinearLayout>

    </RelativeLayout>

    <com.wruzjan.ihg.utils.view.ProgressLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</FrameLayout>

